--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "lint": "next lint",
-    "export": "next export",
-    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -d out -t true"
+    "deploy": "next build && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
