--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
+    "export": "next export",
     "lint": "next lint",
-    "deploy": "next build && touch out/.nojekyll && gh-pages -d out -t true"
+    "deploy": "next build && next export && cp index.html out/ && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
