--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
